feature: redux-toolkit - fetch parking lots info

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,10 @@
       integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
       crossorigin=""
     />
-    <title>Parking Tryout</title>
+    <title>Parking Genie</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/javascript" src="js/Plug_in/proj4.js"></script>
     <script
       src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
       integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
